--- a/.eslintrc
+++ b/.eslintrc
@@ -124,7 +124,9 @@
     "react/react-in-jsx-scope": 2,
     "react/self-closing-comp": 2,
     "react/sort-comp": 2,
-    "react/jsx-wrap-multilines": 2
+    "react/jsx-wrap-multilines": 2,
+    "react-hooks/rules-of-hooks": "error", // Checks rules of Hooks
+    "react-hooks/exhaustive-deps": "warn" // Checks effect dependencies
   },
   "env": {
     "es6": true,
@@ -147,5 +149,5 @@
       "jsx": true
     }
   },
-  "plugins": ["react"]
+  "plugins": ["react", "react-hooks"]
 }
